fix: limit the number of visible transactions

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ body {
       }
     }
   }
+
+  .number-of-transactions {
+    text-align: center;
+  }
 }
 
 #additional-info {
